[metadata]
author = alcubierre-drive
author_email = alcubierre-drive
description = Visually appealing diverging colormaps
long_description = wdiv{0..N} and bdiv{0..N} maps are white/black based diverging
keywords = matplotlib
license = GPLv3
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3
